test/good/generators/nested02.px

func f(n: Int): Rat... def
    func g(n: Int): Rat def
        if n == 0 do
            return 1
        n -= 1
        return g(n) / 2

    yield g(n)
    yield n * g(n)

print [...f(0)]
print [...f(3)]
