test/bad/lambdas/lambda05.px

func f(g: Int->Int->Char) def
    return

f(_*_)
